--- a/templates/page3.html
+++ b/templates/page3.html
@@ -6,9 +6,9 @@
   <h1>Now I know:</h1>
 
 <ul>
- <li> Your first name is:  </li>
- <li> Your last name is:  </li>
- <li> Your favorite color is:  </li>
+ <li> Your first name is:  {{ session["Firstname"] }}</li>
+ <li> Your last name is:  {{ session["Lastname"] }}</li>
+ <li> Your favorite color is:  {{ session["favoritecolor"] }}</li>
 </ul>
 
 
